Added service functions

--- a/Feedback.API/Feedback.API.csproj
+++ b/Feedback.API/Feedback.API.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Feedback.BLL\Feedback.BLL.csproj" />
     <ProjectReference Include="..\Feedback.Shared\Feedback.Shared.csproj" />
   </ItemGroup>
 
